--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "autoprefixer": "^10.4.15",
+    "bootstrap": "^5.3.1",
     "craco": "^0.0.3",
     "postcss": "^8.4.28",
     "react": "^18.2.0",
